# libezdxf

./: .gitignore  CMakeLists.txt  README.md
docs/: notes.md
include/ezdxf/: ezdxf.hpp  math.hpp  object_table.hpp  resource_reference.hpp  simple_set.hpp  tag_allocator.hpp  tag_loader.hpp  tag_types.hpp  type.hpp  types.hpp  utils.hpp
include/ezdxf/acdb/: object.hpp
include/ezdxf/math/: base.hpp  vec3.hpp
include/ezdxf/tag/: allocator.hpp  loader.hpp  tag.hpp
src/: ezdxf.cpp  ezdxf.hpp  libezdxf.cpp  libezdxf.hpp  tag_allocator.cpp  tag_allocator.hpp  tag_loader.cpp  tag_loader.hpp  tag_types.cpp  tag_types.hpp  tagloader.cpp  tagloader.hpp  type.cpp  types.cpp  types.hpp  utils.cpp
src/tag/: allocator.cpp  loader.cpp  tag.cpp
tests/: TestTagTypes.cpp  catch.hpp  run_tests.cpp  test_math_base.cpp  test_math_vec3.cpp  test_tag_tag.cpp  test_tag_types.cpp
tests/0_tag/: 001_tag.cpp  002_loader.cpp
tests/1_math/: 101_base.cpp  102_vec3.cpp
tests/2_utils/: 201_trim_strings.cpp  202_safe_converters.cpp  203_hexlify.cpp  204_dxf_version.cpp  205_simple_set.cpp
tests/3_dxf_objects/: 301_acdb_object.cpp  302_object_table.cpp
tests/math/: 101_base.cpp
tests/tag/: 001_tag.cpp  002_loader.cpp
tests/utils/: 202_safe_converters.cpp
tools/generate/: README.md  config.py
